--- a/src/css/Sort.css
+++ b/src/css/Sort.css
@@ -1,28 +1,24 @@
 .sort {
   display: flex;
-  justify-content: space-around;
   align-items: center;
   padding: 10px;
   border-top: 1px solid #d9d9d9;
   border-bottom: 1px solid #d9d9d9;
 }
 
-.blank {
-  color: white;
-  font-size: 16px;
-}
-
-.filename {
+.sort .filename {
   font-size: 16px;
   font-family: "Nanum Gothic";
   font-weight: 600;
+  margin-left: 160px;
 }
 
-select {
+.sort select {
   padding: 5px 10px;
   cursor: pointer;
   font-size: 16px;
   font-family: "Nanum Gothic";
   font-weight: 600;
   border: none;
+  margin-left: 30px;
 }
